        Reviewed by Darin. Tweaked and landed by Alexey.

http://bugs.webkit.org/show_bug.cgi?id=17411
        Ideographic comma and full stop should be treated as line-breakable characters

        Test: fast/text/line-breaks-after-ideographic-comma-or-full-stop.html

        * platform/text/CharacterNames.h: Added ideographicComma and ideographicFullStop.
        * rendering/break_lines.cpp: (WebCore::shouldBreakAfter): Added a workaround for an issue in
        Unicode 5.0 that is causing this.



Canonical link: https://commits.webkit.org/24303@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30592 268f45cc-cd09-0410-ab3c-d52691b4dbfc